--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "expo": "~47.0.12",
+    "expo-camera": "~13.1.0",
+    "expo-contacts": "~11.0.1",
+    "expo-sensors": "~12.0.1",
     "expo-status-bar": "~1.4.2",
+    "handpose": "^0.1.0",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
