--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.11.1",
     "expo": "~47.0.12",
     "expo-camera": "~13.1.0",
     "expo-contacts": "~11.0.1",
@@ -17,7 +18,10 @@
     "handpose": "^0.1.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "expo-clipboard": "~4.0.1",
+    "expo-document-picker": "~11.0.1",
+    "react-native-gesture-handler": "~2.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
