--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-clipboard/clipboard": "^1.11.1",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@tensorflow/tfjs": "^4.2.0",
-    "expo": "~47.0.12",
-    "expo-camera": "~13.1.0",
-    "expo-clipboard": "~4.0.1",
-    "expo-contacts": "~11.0.1",
-    "expo-document-picker": "~11.0.1",
-    "expo-gl": "~12.0.1",
+    "expo": "^48.0.6",
+    "expo-asset": "~8.9.1",
+    "expo-camera": "^13.2.1",
+    "expo-clipboard": "~2.1.0",
+    "expo-constants": "~13.0.1",
+    "expo-contacts": "~10.1.0",
+    "expo-document-picker": "~10.1.3",
+    "expo-gl": "^12.4.0",
     "expo-gl-cpp": "^11.4.0",
-    "expo-sensors": "~12.0.1",
-    "expo-status-bar": "~1.4.2",
-    "expo-updates": "~0.15.6",
-    "handpose": "^0.1.0",
+    "expo-sensors": "~11.1.0",
+    "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.8.0",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
